maple_tree: use MAS_BUG_ON() from mas_topiary_range() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -772,6 +772,7 @@
 	patches.suse/maple_tree-add-format-option-to-mt_dump.patch
 	patches.suse/maple_tree-add-debug-BUG_ON-and-WARN_ON-variants.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-when-setting-a-leaf-node-a.patch
+	patches.suse/maple_tree-use-MAS_BUG_ON-from-mas_topiary_range.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
