--- a/series.conf
+++ b/series.conf
@@ -8052,6 +8052,7 @@
 	patches.suse/maple_tree-introduce-mas_put_in_tree.patch
 	patches.suse/maple_tree-introduce-mas_tree_parent-definition.patch
 	patches.suse/maple_tree-change-mas_adopt_children-parent-usage.patch
+	patches.suse/maple_tree-replace-data-before-marking-dead-in-split.patch
 	patches.suse/mm-compaction-correct-last_migrated_pfn-update-in-compact_zone.patch
 	patches.suse/mm-compaction-skip-page-block-marked-skip-in-isolate_migratepages_block.patch
 	patches.suse/mm-compaction-correct-comment-of-fast_find_migrateblock-in-isolate_migratepages.patch
