- s390/pci: Use dma-iommu layer (jsc#PED-7779 jsc#PED-7780). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -14050,6 +14050,7 @@
 	patches.suse/iommu-dart-Remove-the-force_bypass-variable
 	patches.suse/iommu-Allow-.iotlb_sync_map-to-fail-and-handle-s390-s-ENOMEM-ret
 	patches.suse/s390-pci-prepare-is_passed_through-for-dma-iommu
+	patches.suse/s390-pci-Use-dma-iommu-layer
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
