kabi, vmstat: skip periodic vmstat update for isolated CPUs (bsc#1217895).

--- a/series.conf
+++ b/series.conf
@@ -23784,6 +23784,7 @@
 	patches.kabi/kabi-workaround-for-enum-nft_trans_phase.patch
 
 	patches.kabi/perf-Disallow-mis-matched-inherited-group-reads-kabi-patch
+	patches.kabi/mstat-skip-periodic-vmstat-update-for-isolated-CPUs-kabi.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
