--- a/series.conf
+++ b/series.conf
@@ -14701,6 +14701,7 @@
 	patches.suse/platform-x86-intel-vsec-Fix-xa_alloc-memory-leak.patch
 	patches.suse/ipmi-Use-regspacings-passed-as-a-module-parameter.patch
 	patches.suse/kunit-debugfs-Fix-unchecked-dereference-in-debugfs_p.patch
+	patches.suse/fanotify-store-fsid-in-mark-instead-of-in-connector.patch
 	patches.suse/xfs-remove-unused-fields-from-struct-xbtree_ifakeroot.patch
 	patches.suse/xfs-update-dir3-leaf-block-metadata-after-swap.patch
 	patches.suse/xfs-short-circuit-xfs_growfs_data_private-if-delta-is-zero.patch
