--- a/series.conf
+++ b/series.conf
@@ -44922,6 +44922,7 @@
 	patches.suse/drm-msm-dpu-Set-input_sel-bit-for-INTF.patch
 	patches.suse/drm-msm-dpu-Drop-enable-and-frame_count-parameters-f.patch
 	patches.suse/drm-mediatek-Return-error-if-MDP-RDMA-failed-to-enab.patch
+	patches.suse/drm-Don-t-unref-the-same-fb-many-times-by-mistake-du.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
 	patches.suse/ASoC-cs35l33-Fix-GPIO-name-and-drop-legacy-include.patch
