--- a/series.conf
+++ b/series.conf
@@ -45022,6 +45022,7 @@
 	patches.suse/power-supply-bq256xx-fix-some-problem-in-bq256xx_hw_.patch
 	patches.suse/power-supply-cw2015-correct-time_to_empty-units-in-s.patch
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
+	patches.suse/drm-amd-display-Port-DENTIST-hang-and-TDR-fixes-to-O.patch
 	patches.suse/ALSA-oxygen-Fix-right-channel-of-capture-volume-mixe.patch
 	patches.suse/ALSA-hda-relatek-Enable-Mute-LED-on-HP-Laptop-15s-fq-bc7863d.patch
 	patches.suse/ALSA-hda-realtek-Enable-mute-micmute-LEDs-and-limit--b018cee.patch
