--- a/series.conf
+++ b/series.conf
@@ -45036,6 +45036,7 @@
 	patches.suse/gpio-eic-sprd-Clear-interrupt-after-set-the-interrup.patch
 	patches.suse/drm-exynos-fix-accidental-on-stack-copy-of-exynos_dr.patch
 	patches.suse/drm-exynos-gsc-minor-fix-for-loop-iteration-in-gsc_r.patch
+	patches.suse/drm-amdgpu-pm-Fix-the-power-source-flag-error.patch
 	patches.suse/drm-bridge-parade-ps8640-Wait-for-HPD-when-doing-an-.patch
 	patches.suse/drm-panel-simple-add-missing-bus-flags-for-Tianma-tm.patch
 	patches.suse/drm-bridge-parade-ps8640-Ensure-bridge-is-suspended-.patch
