maple_tree: fix static analyser cppcheck issue (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -774,6 +774,7 @@
 	patches.suse/mm-page_alloc-move-sysctls-into-it-own-fils.patch
 	patches.suse/0024-mm-gup-remove-unused-vmas-parameter-from-get_user_pa.patch
 	patches.suse/mm-convert-migrate_pages-to-work-on-folios.patch
+	patches.suse/maple_tree-fix-static-analyser-cppcheck-issue.patch
 	patches.suse/maple_tree-clean-up-mas_parent_enum-and-rename-to-ma.patch
 	patches.suse/maple_tree-add-format-option-to-mt_dump.patch
 	patches.suse/maple_tree-add-debug-BUG_ON-and-WARN_ON-variants.patch
