maple_tree: use MAS_BUG_ON() in mas_set_height() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -783,6 +783,7 @@
 	patches.suse/maple_tree-convert-BUG_ON-to-MT_BUG_ON.patch
 	patches.suse/maple_tree-convert-debug-code-to-use-MT_WARN_ON-and-.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-when-setting-a-leaf-node-a.patch
+	patches.suse/maple_tree-use-MAS_BUG_ON-in-mas_set_height.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-from-mas_topiary_range.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
