--- a/series.conf
+++ b/series.conf
@@ -787,6 +787,7 @@
 	patches.suse/maple_tree-use-MAS_BUG_ON-from-mas_topiary_range.patch
 	patches.suse/maple_tree-use-MAS_WR_BUG_ON-in-mas_store_prealloc.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-prior-to-calling-mas_meta_.patch
+	patches.suse/maple_tree-return-error-on-mte_pivots-out-of-range.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
