maple_tree: remove unnecessary check from mas_destroy() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -792,6 +792,7 @@
 	patches.suse/mm-update-validate_mm-to-use-vma-iterator.patch
 	patches.suse/mm-update-vma_iter_store-to-use-MAS_WARN_ON.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
+	patches.suse/maple_tree-remove-unnecessary-check-from-mas_destroy.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
