--- a/series.conf
+++ b/series.conf
@@ -794,6 +794,7 @@
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/maple_tree-remove-unnecessary-check-from-mas_destroy.patch
 	patches.suse/maple_tree-mas_start-reset-depth-on-dead-node.patch
+	patches.suse/mm-mmap-change-do_vmi_align_munmap-for-maple-tree-it.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
