mm: update vma_iter_store() to use MAS_WARN_ON() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -790,6 +790,7 @@
 	patches.suse/maple_tree-return-error-on-mte_pivots-out-of-range.patch
 	patches.suse/maple_tree-make-test-code-work-without-debug-enabled.patch
 	patches.suse/mm-update-validate_mm-to-use-vma-iterator.patch
+	patches.suse/mm-update-vma_iter_store-to-use-MAS_WARN_ON.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
