--- a/series.conf
+++ b/series.conf
@@ -781,6 +781,7 @@
 	patches.suse/maple_tree-add-format-option-to-mt_dump.patch
 	patches.suse/maple_tree-add-debug-BUG_ON-and-WARN_ON-variants.patch
 	patches.suse/maple_tree-convert-BUG_ON-to-MT_BUG_ON.patch
+	patches.suse/maple_tree-change-RCU-checks-to-WARN_ON-instead-of-B.patch
 	patches.suse/maple_tree-convert-debug-code-to-use-MT_WARN_ON-and-.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-when-setting-a-leaf-node-a.patch
 	patches.suse/maple_tree-use-MAS_BUG_ON-in-mas_set_height.patch
