maple_tree: add mas_prev_range() and mas_find_range_rev interface (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -804,6 +804,7 @@
 	patches.suse/maple_tree-add-mas_next_range-and-mas_find_range-int.patch
 	patches.suse/maple_tree-relocate-mas_rewalk-and-mas_rewalk_if_dea.patch
 	patches.suse/maple_tree-introduce-mas_prev_slot-interface.patch
+	patches.suse/maple_tree-add-mas_prev_range-and-mas_find_range_rev.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
