mm: avoid rewalk in mmap_region (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -808,6 +808,7 @@
 	patches.suse/maple_tree-clear-up-index-and-last-setting-in-single.patch
 	patches.suse/maple_tree-update-testing-code-for-mas_-next-prev-wa.patch
 	patches.suse/mm-add-vma_iter_-next-prev-_range-to-vma-iterator.patch
+	patches.suse/mm-avoid-rewalk-in-mmap_region.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
