--- a/series.conf
+++ b/series.conf
@@ -801,6 +801,7 @@
 	patches.suse/maple_tree-revise-limit-checks-in-mas_empty_area-_re.patch
 	patches.suse/maple_tree-fix-testing-mas_empty_area.patch
 	patches.suse/maple_tree-introduce-mas_next_slot-interface.patch
+	patches.suse/maple_tree-add-mas_next_range-and-mas_find_range-int.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
