--- a/series.conf
+++ b/series.conf
@@ -806,6 +806,7 @@
 	patches.suse/maple_tree-introduce-mas_prev_slot-interface.patch
 	patches.suse/maple_tree-add-mas_prev_range-and-mas_find_range_rev.patch
 	patches.suse/maple_tree-clear-up-index-and-last-setting-in-single.patch
+	patches.suse/maple_tree-update-testing-code-for-mas_-next-prev-wa.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
 	patches.suse/mm-compaction-simplify-should_compact_retry.patch
