--- a/series.conf
+++ b/series.conf
@@ -835,6 +835,7 @@
 	patches.suse/mm-compaction-skip-fast-freepages-isolation-if-enough-freepages-are-isolated.patch
 	patches.suse/mm-shmem-fix-UAF-bug-in-shmem_show_options.patch
 	patches.suse/maple_tree-rework-mtree_alloc_-range-rrange.patch
+	patches.suse/maple_tree-drop-mas_-rev_-alloc-and-mas_fill_gap.patch
 	patches.suse/maple_tree-fix-the-arguments-to-__must_hold.patch
 	patches.suse/mm-mm_init.c-introduce-reset_memoryless_node_totalpages.patch
 	patches.suse/mm-mm_init.c-do-not-calculate-zone_start_pfn-zone_end_pfn-in-zone_absent_pages_in_node.patch
