maple_tree: relocate the declaration of mas_empty_area_rev() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -843,6 +843,7 @@
 	patches.suse/maple_tree-add-comments-and-some-minor-cleanups-to-m.patch
 	patches.suse/maple_tree-rework-mas_wr_slot_store-to-be-cleaner-an.patch
 	patches.suse/maple_tree-simplify-and-clean-up-mas_wr_node_store.patch
+	patches.suse/maple_tree-relocate-the-declaration-of-mas_empty_are.patch
 	patches.suse/mm-mm_init.c-introduce-reset_memoryless_node_totalpages.patch
 	patches.suse/mm-mm_init.c-do-not-calculate-zone_start_pfn-zone_end_pfn-in-zone_absent_pages_in_node.patch
 	patches.suse/THP-avoid-lock-when-check-whether-THP-is-in-deferred-list.patch
