--- a/series.conf
+++ b/series.conf
@@ -839,6 +839,7 @@
 	patches.suse/maple_tree-fix-the-arguments-to-__must_hold.patch
 	patches.suse/maple_tree-simplify-mas_is_span_wr.patch
 	patches.suse/maple_tree-make-the-code-symmetrical-in-mas_wr_exten.patch
+	patches.suse/maple_tree-add-mas_wr_new_end-to-calculate-new_end-a.patch
 	patches.suse/mm-mm_init.c-introduce-reset_memoryless_node_totalpages.patch
 	patches.suse/mm-mm_init.c-do-not-calculate-zone_start_pfn-zone_end_pfn-in-zone_absent_pages_in_node.patch
 	patches.suse/THP-avoid-lock-when-check-whether-THP-is-in-deferred-list.patch
