--- a/series.conf
+++ b/series.conf
@@ -884,6 +884,7 @@
 	patches.suse/mm-various-give-up-if-pte_offset_map-_lock-fails.patch
 	patches.suse/mm-hugetlb-fix-pgtable-lock-on-pmd-sharing.patch
 	patches.suse/selftests-mm-remove-wrong-kernel-header-inclusion.patch
+	patches.suse/userfaultfd-fix-regression-in-userfaultfd_unmap_prep.patch
 	patches.suse/mm-compaction-mark-kcompactd_run-and-kcompactd_stop-__meminit.patch
 	patches.suse/percpu-internal-pcpu_chunk-re-layout-pcpu_chunk-structure-to-reduce-false-sharing.patch
 	patches.suse/gfs2-use-a-folio-inside-gfs2_jdata_writepage.patch
