mm: don't do validate_mm() unnecessarily and without mmap locking (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -5138,6 +5138,7 @@
 	patches.suse/nvme-disable-controller-on-reset-state-failure.patch
 	patches.suse/md-raid0-add-discard-support-for-the-original-l.patch
 	patches.suse/arch-arm64-mm-fault-Fix-undeclared-variable-err.patch
+	patches.suse/mm-don-t-do-validate_mm-unnecessarily-and-without-mm.patch
 	patches.suse/firewire-net-fix-use-after-free-in-fwnet_finis.patch
 	patches.suse/clk-qcom-gcc-ipq5332-Use-floor-ops-for-SDCC-clo.patch
 	patches.suse/clk-qcom-mmcc-msm8974-remove-oxili_ocmemgx_clk.patch
