mm/mmap: separate writenotify and dirty tracking logic (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -869,6 +869,7 @@
 	patches.suse/mm-damon-ops-common-atomically-test-and-clear-y.patch
 	patches.suse/mm-damon-ops-common-refactor-to-use-pte-pmd-p_clear_young_notify.patch
 	patches.suse/mm-fix-failure-to-unmap-pte-on-highmem-systems.patch
+	patches.suse/mm-mmap-separate-writenotify-and-dirty-tracking-logi.patch
 	patches.suse/mm-page_isolation-write-proper-kerneldoc.patch
 	patches.suse/mm-skip-CMA-pages-when-they-are-not-available.patch
 	patches.suse/mm-vmscan-mark-kswapd_run-and-kswapd_stop-__meminit.patch
