--- a/series.conf
+++ b/series.conf
@@ -4793,6 +4793,7 @@
 	patches.suse/cifs-log-session-id-when-a-matching-ses-is-not-found.patch
 	patches.suse/cifs-new-dynamic-tracepoint-to-track-ses-not-found-errors.patch
 	patches.suse/xtensa-fix-lock_mm_and_find_vma-in-case-VMA-not.patch
+	patches.suse/mm-Always-downgrade-mmap_lock-if-requested.patch
 	patches.suse/dax-fix-missing-prototype-warnings-2d51.patch
 	patches.suse/libnvdimm-mark-security_show-static-again-7f80.patch
 	patches.suse/nvdimm-make-nd_class-variable-static-191a.patch
