- mm: Update do_vmi_align_munmap() return semantics (bsc#1219404). - Refresh patches.suse/mm-re-introduce-vm_flags-to-do_mmap.patch.

--- a/series.conf
+++ b/series.conf
@@ -4794,6 +4794,7 @@
 	patches.suse/cifs-new-dynamic-tracepoint-to-track-ses-not-found-errors.patch
 	patches.suse/xtensa-fix-lock_mm_and_find_vma-in-case-VMA-not.patch
 	patches.suse/mm-Always-downgrade-mmap_lock-if-requested.patch
+	patches.suse/mm-Update-do_vmi_align_munmap-return-semantics.patch
 	patches.suse/dax-fix-missing-prototype-warnings-2d51.patch
 	patches.suse/libnvdimm-mark-security_show-static-again-7f80.patch
 	patches.suse/nvdimm-make-nd_class-variable-static-191a.patch
