Revert "scsi: fcoe: Fix potential deadlock on &fip->ctlr_lock" (bsc#1219141).

--- a/series.conf
+++ b/series.conf
@@ -15743,6 +15743,7 @@
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
 	patches.suse/fnic-move-fnic_fnic_flush_tx-to-a-work-queue.patch
+	patches.suse/revert-scsi-fcoe-fix-potential-deadlock-on-fip-ctlr_lock.patch
 
 	########################################################
 	# end of sorted patches
