fnic: move fnic_fnic_flush_tx() to a work queue (bsc#1219141).

--- a/series.conf
+++ b/series.conf
@@ -15742,6 +15742,7 @@
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
+	patches.suse/fnic-move-fnic_fnic_flush_tx-to-a-work-queue.patch
 
 	########################################################
 	# end of sorted patches
