--- a/series.conf
+++ b/series.conf
@@ -16106,6 +16106,7 @@
 	patches.suse/paddings-for-mediatek-802.11.patch
 	patches.suse/paddings-for-ath-802.11.patch
 	patches.suse/paddings-for-the-inter-DMN-tunnel-stuff-of-TB.patch
+	patches.suse/selftests-bpf-user_ringbuf-define-c_ringbuf_size.patch
 
 	########################################################
 	# kABI consistency patches
