- vfio/pds: Add missing PCI_IOV depends (jsc#PED-7779   jsc#PED-7780). - vfio/pds: Fix calculations in pds_vfio_dirty_sync (jsc#PED-7779   jsc#PED-7780). - Refresh patches.suse/vfio-Move-iova_bitmap-into-iommufd.

--- a/series.conf
+++ b/series.conf
@@ -11518,6 +11518,7 @@
 	patches.suse/reiserfs-Replace-1-element-array-with-C99-style-flex-array.patch
 	patches.suse/direct_write_fallback-on-error-revert-the-ki_pos-upd.patch
 	patches.suse/ovl-disable-IOCB_DIO_CALLER_COMP.patch
+	patches.suse/vfio-pds-Add-missing-PCI_IOV-depends
 	patches.suse/scsi-core-ata-Do-no-try-to-probe-for-CDL-on-old-driv.patch
 	patches.suse/spi-spi-gxp-BUG-Correct-spi-write-return-value.patch
 	patches.suse/power-supply-ab8500-Set-typing-and-props.patch
@@ -16078,6 +16079,7 @@
 	patches.suse/s390-vfio-ap-reset-queues-filtered-from-the-guest-s-AP-config.patch
 	patches.suse/s390-vfio-ap-reset-queues-associated-with-adapter-for-queue-unbound-from-driver.patch
 	patches.suse/s390-vfio-ap-do-not-reset-queue-removed-from-host-config.patch
+	patches.suse/vfio-pds-Fix-calculations-in-pds_vfio_dirty_sync
 	patches.suse/cxl-region-fix-x9-interleave-typo.patch
 	patches.suse/cxl-port-Fix-decoder-initialization-when-nr_targets-.patch
 	patches.suse/virtio_pmem-support-feature-SHMEM_REGION-3596.patch
