--- a/series.conf
+++ b/series.conf
@@ -1095,6 +1095,7 @@
 	patches.suse/wifi-cfg80211-detect-stuck-ECSA-element-in-probe-resp.patch
 	patches.suse/wifi-mac80211-improve-CSA-ECSA-connection-refusal.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
+	patches.suse/r8169-add-support-for-RTL8126A.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
