HID: bpf: actually free hdev memory after attaching a HID-BPF program (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15733,6 +15733,7 @@
 	patches.suse/HID-hidraw-fix-a-problem-of-memory-leak-in-hidraw_re.patch
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 	patches.suse/HID-bpf-remove-double-fdget.patch
+	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
