serial: sc16is7xx: remove obsolete loop in sc16is7xx_port_irq() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15503,6 +15503,7 @@
 	patches.suse/serial-sc16is7xx-fix-invalid-sc16is7xx_lines-bitfiel.patch
 	patches.suse/serial-sc16is7xx-add-check-for-unsupported-SPI-modes.patch
 	patches.suse/serial-sc16is7xx-set-safe-default-SPI-clock-frequenc.patch
+	patches.suse/serial-sc16is7xx-remove-obsolete-loop-in-sc16is7xx_p.patch
 	patches.suse/usb-typec-tcpm-skip-checking-port-send_discover-in-P.patch
 	patches.suse/usb-core-Don-t-force-USB-generic_subclass-drivers-to.patch
 	patches.suse/usb-core-Allow-subclassed-USB-drivers-to-override-us.patch
