--- a/series.conf
+++ b/series.conf
@@ -15729,6 +15729,7 @@
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
+	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
