--- a/series.conf
+++ b/series.conf
@@ -15734,6 +15734,7 @@
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 	patches.suse/HID-bpf-remove-double-fdget.patch
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
+	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
