--- a/series.conf
+++ b/series.conf
@@ -15730,6 +15730,7 @@
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
+	patches.suse/HID-hidraw-fix-a-problem-of-memory-leak-in-hidraw_re.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
