serial: sc16is7xx: fix invalid sc16is7xx_lines bitfield in case of probe error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15500,6 +15500,7 @@
 	patches.suse/serial-core-imx-do-not-set-RS485-enabled-if-it-is-no.patch
 	patches.suse/serial-omap-do-not-override-settings-for-RS485-suppo.patch
 	patches.suse/serial-8250_exar-Set-missing-rs485_supported-flag.patch
+	patches.suse/serial-sc16is7xx-fix-invalid-sc16is7xx_lines-bitfiel.patch
 	patches.suse/serial-sc16is7xx-add-check-for-unsupported-SPI-modes.patch
 	patches.suse/serial-sc16is7xx-set-safe-default-SPI-clock-frequenc.patch
 	patches.suse/usb-typec-tcpm-skip-checking-port-send_discover-in-P.patch
