--- a/series.conf
+++ b/series.conf
@@ -15728,6 +15728,7 @@
 	patches.suse/genirq-Initialize-resend_node-hlist-for-all-interrup.patch
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
+	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
