--- a/series.conf
+++ b/series.conf
@@ -15732,6 +15732,7 @@
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 	patches.suse/HID-hidraw-fix-a-problem-of-memory-leak-in-hidraw_re.patch
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
+	patches.suse/HID-bpf-remove-double-fdget.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
