--- a/series.conf
+++ b/series.conf
@@ -15489,6 +15489,7 @@
 	patches.suse/serial-sc16is7xx-remove-unused-line-structure-member.patch
 	patches.suse/serial-sc16is7xx-change-EFR-lock-to-operate-on-each-.patch
 	patches.suse/serial-sc16is7xx-convert-from-_raw_-to-_noinc_-regma.patch
+	patches.suse/serial-sc16is7xx-fix-unconditional-activation-of-THR.patch
 	patches.suse/serial-imx-Correct-clock-error-message-in-function-p.patch
 	patches.suse/serial-apbuart-fix-console-prompt-on-qemu.patch
 	patches.suse/serial-imx-Ensure-that-imx_uart_rs485_config-is-call.patch
