--- a/series.conf
+++ b/series.conf
@@ -14150,6 +14150,7 @@
 	patches.suse/octeontx2-af-Check-return-value-of-nix_get_nixlf-bef.patch
 	patches.suse/net-tg3-fix-race-condition-in-tg3_reset_task.patch
 	patches.suse/msft-hv-2917-hv_netvsc-rndis_filter-needs-to-select-NLS.patch
+	patches.suse/r8169-fix-rtl8125b-PAUSE-frames-blasting-when-suspen.patch
 	patches.suse/r8152-Add-RTL8152_INACCESSIBLE-checks-to-more-loops.patch
 	patches.suse/r8152-Add-RTL8152_INACCESSIBLE-to-r8156b_wait_loadin.patch
 	patches.suse/r8152-Add-RTL8152_INACCESSIBLE-to-r8153_pre_firmware.patch
