--- a/series.conf
+++ b/series.conf
@@ -15761,6 +15761,7 @@
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
+	patches.suse/r8169-add-support-for-RTL8126A.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
