--- a/series.conf
+++ b/series.conf
@@ -15762,6 +15762,7 @@
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
 	patches.suse/r8169-add-support-for-RTL8126A.patch
+	patches.suse/net-phy-realtek-add-support-for-RTL8126A-integrated-.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
