--- a/series.conf
+++ b/series.conf
@@ -2183,6 +2183,7 @@
 	patches.kernel.org/6.6.11-124-media-qcom-camss-Comment-CSID-dt_id-field.patch
 	patches.kernel.org/6.6.11-125-Linux-6.6.11.patch
 	patches.kernel.org/6.6.12-001-nfsd-drop-the-nfsd_put-helper.patch
+	patches.kernel.org/6.6.12-002-Linux-6.6.12.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
