nfsd: drop the nfsd_put helper (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2182,6 +2182,7 @@
 	patches.kernel.org/6.6.11-123-cxl-memdev-Hold-region_rwsem-during-inject-and.patch
 	patches.kernel.org/6.6.11-124-media-qcom-camss-Comment-CSID-dt_id-field.patch
 	patches.kernel.org/6.6.11-125-Linux-6.6.11.patch
+	patches.kernel.org/6.6.12-001-nfsd-drop-the-nfsd_put-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
