netfilter: nf_tables: validate NFPROTO_* family (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3123,6 +3123,7 @@
 	patches.kernel.org/6.6.15-204-rcu-Defer-RCU-kthreads-wakeup-when-CPU-is-dyin.patch
 	patches.kernel.org/6.6.15-205-netfilter-nft_limit-reject-configurations-that.patch
 	patches.kernel.org/6.6.15-206-netfilter-nf_tables-restrict-anonymous-set-and.patch
+	patches.kernel.org/6.6.15-207-netfilter-nf_tables-validate-NFPROTO_-family.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
