--- a/series.conf
+++ b/series.conf
@@ -3105,6 +3105,7 @@
 	patches.kernel.org/6.6.15-186-tcp-Add-memory-barrier-to-tcp_push.patch
 	patches.kernel.org/6.6.15-187-selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-.patch
 	patches.kernel.org/6.6.15-188-netlink-fix-potential-sleeping-issue-in-mqueue.patch
+	patches.kernel.org/6.6.15-189-ipv6-init-the-accept_queue-s-spinlocks-in-inet.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
