s390/vfio-ap: unpin pages on gisc registration failure (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2959,6 +2959,7 @@
 	patches.kernel.org/6.6.15-040-PM-hibernate-Enforce-ordering-during-image-com.patch
 	patches.kernel.org/6.6.15-041-hwrng-core-Fix-page-fault-dead-lock-on-mmap-ed.patch
 	patches.kernel.org/6.6.15-042-crypto-s390-aes-Fix-buffer-overread-in-CTR-mod.patch
+	patches.kernel.org/6.6.15-043-s390-vfio-ap-unpin-pages-on-gisc-registration-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
