--- a/series.conf
+++ b/series.conf
@@ -3015,6 +3015,7 @@
 	patches.kernel.org/6.6.15-096-arm64-dts-qcom-sdm670-fix-USB-DP-DM-HS-PHY-int.patch
 	patches.kernel.org/6.6.15-097-arm64-dts-qcom-sdm670-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-098-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
+	patches.kernel.org/6.6.15-099-lsm-new-security_file_ioctl_compat-hook.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
