--- a/series.conf
+++ b/series.conf
@@ -3182,6 +3182,7 @@
 	patches.kernel.org/6.6.15-263-drm-amd-display-Disable-PSR-SU-on-Parade-0803-.patch
 	patches.kernel.org/6.6.15-264-Revert-drm-amd-display-fix-bandwidth-validatio.patch
 	patches.kernel.org/6.6.15-265-drm-bridge-nxp-ptn3460-simplify-some-error-che.patch
+	patches.kernel.org/6.6.15-266-drm-amdgpu-correct-the-cu-count-for-gfx-v11.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
