--- a/series.conf
+++ b/series.conf
@@ -3226,6 +3226,7 @@
 	patches.kernel.org/6.6.15-307-memblock-fix-crash-when-reserved-memory-is-not.patch
 	patches.kernel.org/6.6.15-308-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
 	patches.kernel.org/6.6.15-309-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
+	patches.kernel.org/6.6.15-310-firmware-arm_scmi-Use-xa_insert-to-store-opps.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
