--- a/series.conf
+++ b/series.conf
@@ -3159,6 +3159,7 @@
 	patches.kernel.org/6.6.15-240-wifi-iwlwifi-fix-a-memory-corruption.patch
 	patches.kernel.org/6.6.15-241-nfsd-fix-RELEASE_LOCKOWNER.patch
 	patches.kernel.org/6.6.15-242-hv_netvsc-Calculate-correct-ring-size-when-PAG.patch
+	patches.kernel.org/6.6.15-243-netfilter-nft_chain_filter-handle-NETDEV_UNREG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
