arm64: dts: qcom: msm8939: Make blsp_dma controlled-remotely (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2997,6 +2997,7 @@
 	patches.kernel.org/6.6.15-078-arm64-dts-rockchip-configure-eth-pad-driver-st.patch
 	patches.kernel.org/6.6.15-079-arm64-dts-rockchip-Fix-rk3588-USB-power-domain.patch
 	patches.kernel.org/6.6.15-080-arm64-dts-qcom-msm8916-Make-blsp_dma-controlle.patch
+	patches.kernel.org/6.6.15-081-arm64-dts-qcom-msm8939-Make-blsp_dma-controlle.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
