--- a/series.conf
+++ b/series.conf
@@ -3229,6 +3229,7 @@
 	patches.kernel.org/6.6.15-310-firmware-arm_scmi-Use-xa_insert-to-store-opps.patch
 	patches.kernel.org/6.6.15-311-firmware-arm_scmi-Use-xa_insert-when-saving-ra.patch
 	patches.kernel.org/6.6.15-312-gpio-eic-sprd-Clear-interrupt-after-set-the-in.patch
+	patches.kernel.org/6.6.15-313-ARM-dts-exynos4212-tab3-add-samsung-invert-vcl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
