--- a/series.conf
+++ b/series.conf
@@ -3063,6 +3063,7 @@
 	patches.kernel.org/6.6.15-144-ksmbd-Add-missing-set_freezable-for-freezable-.patch
 	patches.kernel.org/6.6.15-145-dt-bindings-net-snps-dwmac-Tx-coe-unsupported.patch
 	patches.kernel.org/6.6.15-146-bpf-move-explored_state-closer-to-the-beginnin.patch
+	patches.kernel.org/6.6.15-147-bpf-extract-same_callsites-as-utility-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
