serial: core: set missing supported flag for RX during TX GPIO (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2921,6 +2921,7 @@
 	patches.kernel.org/6.6.15-002-docs-sparse-add-sparse.rst-to-toctree.patch
 	patches.kernel.org/6.6.15-003-docs-kernel_feat.py-fix-potential-command-inje.patch
 	patches.kernel.org/6.6.15-004-serial-core-Simplify-uart_get_rs485_mode.patch
+	patches.kernel.org/6.6.15-005-serial-core-set-missing-supported-flag-for-RX-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
