spi: spi-cadence: Reverse the order of interleaved write and read operations (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3235,6 +3235,7 @@
 	patches.kernel.org/6.6.15-316-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
 	patches.kernel.org/6.6.15-317-cpufreq-amd-pstate-Fix-setting-scaling-max-min.patch
 	patches.kernel.org/6.6.15-318-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
+	patches.kernel.org/6.6.15-319-spi-spi-cadence-Reverse-the-order-of-interleav.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
