--- a/series.conf
+++ b/series.conf
@@ -3175,6 +3175,7 @@
 	patches.kernel.org/6.6.15-256-drm-bridge-nxp-ptn3460-fix-i2c_master_send-err.patch
 	patches.kernel.org/6.6.15-257-drm-Fix-TODO-list-mentioning-non-KMS-drivers.patch
 	patches.kernel.org/6.6.15-258-drm-tidss-Fix-atomic_flush-check.patch
+	patches.kernel.org/6.6.15-259-drm-Disable-the-cursor-plane-on-atomic-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
