--- a/series.conf
+++ b/series.conf
@@ -3029,6 +3029,7 @@
 	patches.kernel.org/6.6.15-110-riscv-mm-Fixup-compat-mode-boot-failure.patch
 	patches.kernel.org/6.6.15-111-arm64-Rename-ARM64_WORKAROUND_2966298.patch
 	patches.kernel.org/6.6.15-112-arm64-errata-Add-Cortex-A510-speculative-unpri.patch
+	patches.kernel.org/6.6.15-113-arm64-sme-Always-exit-sme_alloc-early-with-exi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
