netfilter: nf_tables: restrict anonymous set and map names to 16 bytes (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3122,6 +3122,7 @@
 	patches.kernel.org/6.6.15-203-net-mlx5e-fix-a-potential-double-free-in-fs_an.patch
 	patches.kernel.org/6.6.15-204-rcu-Defer-RCU-kthreads-wakeup-when-CPU-is-dyin.patch
 	patches.kernel.org/6.6.15-205-netfilter-nft_limit-reject-configurations-that.patch
+	patches.kernel.org/6.6.15-206-netfilter-nf_tables-restrict-anonymous-set-and.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
