--- a/series.conf
+++ b/series.conf
@@ -3165,6 +3165,7 @@
 	patches.kernel.org/6.6.15-246-platform-x86-p2sb-Allow-p2sb_bar-calls-during-.patch
 	patches.kernel.org/6.6.15-247-ksmbd-fix-global-oob-in-ksmbd_nl_policy.patch
 	patches.kernel.org/6.6.15-248-firmware-arm_scmi-Check-mailbox-SMT-channel-fo.patch
+	patches.kernel.org/6.6.15-249-Revert-drivers-firmware-Move-sysfb_init-from-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
