--- a/series.conf
+++ b/series.conf
@@ -2985,6 +2985,7 @@
 	patches.kernel.org/6.6.15-066-mips-Fix-max_mapnr-being-uninitialized-on-earl.patch
 	patches.kernel.org/6.6.15-067-bus-mhi-host-Add-alignment-check-for-event-rin.patch
 	patches.kernel.org/6.6.15-068-bus-mhi-host-Drop-chan-lock-before-queuing-buf.patch
+	patches.kernel.org/6.6.15-069-bus-mhi-host-Add-spinlock-to-protect-WP-access.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
