serial: sc16is7xx: change EFR lock to operate on each channels (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3048,6 +3048,7 @@
 	patches.kernel.org/6.6.15-129-serial-sc16is7xx-remove-wasteful-static-buffer.patch
 	patches.kernel.org/6.6.15-130-serial-sc16is7xx-remove-global-regmap-from-str.patch
 	patches.kernel.org/6.6.15-131-serial-sc16is7xx-remove-unused-line-structure-.patch
+	patches.kernel.org/6.6.15-132-serial-sc16is7xx-change-EFR-lock-to-operate-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
