--- a/series.conf
+++ b/series.conf
@@ -3028,6 +3028,7 @@
 	patches.kernel.org/6.6.15-109-riscv-mm-Fixup-compat-arch_get_mmap_end.patch
 	patches.kernel.org/6.6.15-110-riscv-mm-Fixup-compat-mode-boot-failure.patch
 	patches.kernel.org/6.6.15-111-arm64-Rename-ARM64_WORKAROUND_2966298.patch
+	patches.kernel.org/6.6.15-112-arm64-errata-Add-Cortex-A510-speculative-unpri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
