selftests: bonding: Increase timeout to 1200s (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3086,6 +3086,7 @@
 	patches.kernel.org/6.6.15-167-SUNRPC-use-request-size-to-initialize-bio_vec-.patch
 	patches.kernel.org/6.6.15-168-wifi-mac80211-fix-potential-sta-link-leak.patch
 	patches.kernel.org/6.6.15-169-net-smc-fix-illegal-rmb_desc-access-in-SMC-D-c.patch
+	patches.kernel.org/6.6.15-170-selftests-bonding-Increase-timeout-to-1200s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
