mm: migrate: record the mlocked page status to remove unnecessary lru drain (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3202,6 +3202,7 @@
 	patches.kernel.org/6.6.15-283-thermal-trip-Drop-redundant-trips-check-from-f.patch
 	patches.kernel.org/6.6.15-284-thermal-core-Store-trip-pointer-in-struct-ther.patch
 	patches.kernel.org/6.6.15-285-thermal-gov_power_allocator-avoid-inability-to.patch
+	patches.kernel.org/6.6.15-286-mm-migrate-record-the-mlocked-page-status-to-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
