drm: Fix TODO list mentioning non-KMS drivers (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3173,6 +3173,7 @@
 	patches.kernel.org/6.6.15-254-Revert-drm-i915-dsi-Do-display-on-sequence-lat.patch
 	patches.kernel.org/6.6.15-255-drm-Don-t-unref-the-same-fb-many-times-by-mist.patch
 	patches.kernel.org/6.6.15-256-drm-bridge-nxp-ptn3460-fix-i2c_master_send-err.patch
+	patches.kernel.org/6.6.15-257-drm-Fix-TODO-list-mentioning-non-KMS-drivers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
