--- a/series.conf
+++ b/series.conf
@@ -3073,6 +3073,7 @@
 	patches.kernel.org/6.6.15-154-selftests-bpf-track-string-payload-offset-as-s.patch
 	patches.kernel.org/6.6.15-155-bpf-extract-__check_reg_arg-utility-function.patch
 	patches.kernel.org/6.6.15-156-bpf-extract-setup_func_entry-utility-function.patch
+	patches.kernel.org/6.6.15-157-bpf-verify-callbacks-as-if-they-are-called-unk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
