--- a/series.conf
+++ b/series.conf
@@ -3204,6 +3204,7 @@
 	patches.kernel.org/6.6.15-285-thermal-gov_power_allocator-avoid-inability-to.patch
 	patches.kernel.org/6.6.15-286-mm-migrate-record-the-mlocked-page-status-to-r.patch
 	patches.kernel.org/6.6.15-287-mm-migrate-fix-getting-incorrect-page-mapping-.patch
+	patches.kernel.org/6.6.15-288-serial-core-Provide-port-lock-wrappers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
