--- a/series.conf
+++ b/series.conf
@@ -3179,6 +3179,7 @@
 	patches.kernel.org/6.6.15-260-drm-virtio-Disable-damage-clipping-if-FB-chang.patch
 	patches.kernel.org/6.6.15-261-drm-Allow-drivers-to-indicate-the-damage-helpe.patch
 	patches.kernel.org/6.6.15-262-drm-amd-display-fix-bandwidth-validation-failu.patch
+	patches.kernel.org/6.6.15-263-drm-amd-display-Disable-PSR-SU-on-Parade-0803-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
