--- a/series.conf
+++ b/series.conf
@@ -3186,6 +3186,7 @@
 	patches.kernel.org/6.6.15-267-drm-amd-display-Fix-variable-deferencing-befor.patch
 	patches.kernel.org/6.6.15-268-drm-amd-display-Port-DENTIST-hang-and-TDR-fixe.patch
 	patches.kernel.org/6.6.15-269-drm-amd-display-Align-the-returned-error-code-.patch
+	patches.kernel.org/6.6.15-270-drm-amd-display-Fix-late-derefrence-dsc-check-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
