--- a/series.conf
+++ b/series.conf
@@ -3103,6 +3103,7 @@
 	patches.kernel.org/6.6.15-184-tracing-Ensure-visibility-when-inserting-an-el.patch
 	patches.kernel.org/6.6.15-185-afs-Hide-silly-rename-files-from-userspace.patch
 	patches.kernel.org/6.6.15-186-tcp-Add-memory-barrier-to-tcp_push.patch
+	patches.kernel.org/6.6.15-187-selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
