--- a/series.conf
+++ b/series.conf
@@ -3128,6 +3128,7 @@
 	patches.kernel.org/6.6.15-209-net-mvpp2-clear-BM-pool-before-initialization.patch
 	patches.kernel.org/6.6.15-210-selftests-net-fix-rps_default_mask-with-32-CPU.patch
 	patches.kernel.org/6.6.15-211-selftests-netdevsim-fix-the-udp_tunnel_nic-tes.patch
+	patches.kernel.org/6.6.15-212-xsk-recycle-buffer-in-case-Rx-queue-was-full.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
