clocksource: Skip watchdog check for large watchdog intervals (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3243,6 +3243,7 @@
 	patches.kernel.org/6.6.15-324-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.kernel.org/6.6.15-325-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
 	patches.kernel.org/6.6.15-326-genirq-Initialize-resend_node-hlist-for-all-in.patch
+	patches.kernel.org/6.6.15-327-clocksource-Skip-watchdog-check-for-large-watc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
