netlink: fix potential sleeping issue in mqueue_flush_file (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3104,6 +3104,7 @@
 	patches.kernel.org/6.6.15-185-afs-Hide-silly-rename-files-from-userspace.patch
 	patches.kernel.org/6.6.15-186-tcp-Add-memory-barrier-to-tcp_push.patch
 	patches.kernel.org/6.6.15-187-selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-.patch
+	patches.kernel.org/6.6.15-188-netlink-fix-potential-sleeping-issue-in-mqueue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
