drm/bridge: parade-ps8640: Wait for HPD when doing an AUX transfer (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3216,6 +3216,7 @@
 	patches.kernel.org/6.6.15-297-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XTN02-.patch
 	patches.kernel.org/6.6.15-298-drm-amdgpu-gfx10-set-UNORD_DISPATCH-in-compute.patch
 	patches.kernel.org/6.6.15-299-drm-amdgpu-gfx11-set-UNORD_DISPATCH-in-compute.patch
+	patches.kernel.org/6.6.15-300-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
