--- a/series.conf
+++ b/series.conf
@@ -2928,6 +2928,7 @@
 	patches.kernel.org/6.6.15-009-net-stmmac-Prevent-DSA-tags-from-breaking-COE.patch
 	patches.kernel.org/6.6.15-010-iio-adc-ad7091r-Set-alert-bit-in-config-regist.patch
 	patches.kernel.org/6.6.15-011-iio-adc-ad7091r-Allow-users-to-configure-devic.patch
+	patches.kernel.org/6.6.15-012-iio-adc-ad7091r-Enable-internal-vref-if-extern.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
