drm/exynos: fix accidental on-stack copy of exynos_drm_plane (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3224,6 +3224,7 @@
 	patches.kernel.org/6.6.15-305-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 	patches.kernel.org/6.6.15-306-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
 	patches.kernel.org/6.6.15-307-memblock-fix-crash-when-reserved-memory-is-not.patch
+	patches.kernel.org/6.6.15-308-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
