mtd: rawnand: Clarify conditions to enable continuous reads (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2965,6 +2965,7 @@
 	patches.kernel.org/6.6.15-046-mtd-rawnand-Prevent-crossing-LUN-boundaries-du.patch
 	patches.kernel.org/6.6.15-047-mtd-rawnand-Fix-core-interference-with-sequent.patch
 	patches.kernel.org/6.6.15-048-mtd-rawnand-Prevent-sequential-reads-with-on-d.patch
+	patches.kernel.org/6.6.15-049-mtd-rawnand-Clarify-conditions-to-enable-conti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
