net/mlx5: Fix a WARN upon a callback command failure (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3110,6 +3110,7 @@
 	patches.kernel.org/6.6.15-191-net-sched-flower-Fix-chain-template-offload.patch
 	patches.kernel.org/6.6.15-192-net-mlx5e-Fix-operation-precedence-bug-in-port.patch
 	patches.kernel.org/6.6.15-193-net-mlx5e-Fix-peer-flow-lists-handling.patch
+	patches.kernel.org/6.6.15-194-net-mlx5-Fix-a-WARN-upon-a-callback-command-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
