--- a/series.conf
+++ b/series.conf
@@ -3190,6 +3190,7 @@
 	patches.kernel.org/6.6.15-271-drm-amdgpu-pm-Fix-the-power-source-flag-error.patch
 	patches.kernel.org/6.6.15-272-drm-amd-display-Fix-uninitialized-variable-usa.patch
 	patches.kernel.org/6.6.15-273-net-bpf-Avoid-unused-sin_addr_len-warning-when.patch
+	patches.kernel.org/6.6.15-274-thermal-intel-hfi-Refactor-enabling-code-into-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
