--- a/series.conf
+++ b/series.conf
@@ -2957,6 +2957,7 @@
 	patches.kernel.org/6.6.15-038-erofs-fix-lz4-inplace-decompression.patch
 	patches.kernel.org/6.6.15-039-crypto-api-Disallow-identical-driver-names.patch
 	patches.kernel.org/6.6.15-040-PM-hibernate-Enforce-ordering-during-image-com.patch
+	patches.kernel.org/6.6.15-041-hwrng-core-Fix-page-fault-dead-lock-on-mmap-ed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
