thermal: intel: hfi: Add syscore callbacks for system-wide PM (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3192,6 +3192,7 @@
 	patches.kernel.org/6.6.15-273-net-bpf-Avoid-unused-sin_addr_len-warning-when.patch
 	patches.kernel.org/6.6.15-274-thermal-intel-hfi-Refactor-enabling-code-into-.patch
 	patches.kernel.org/6.6.15-275-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
+	patches.kernel.org/6.6.15-276-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
