--- a/series.conf
+++ b/series.conf
@@ -3005,6 +3005,7 @@
 	patches.kernel.org/6.6.15-086-arm64-dts-qcom-sc8180x-fix-USB-wakeup-interrup.patch
 	patches.kernel.org/6.6.15-087-arm64-dts-qcom-sc7280-fix-usb_1-wakeup-interru.patch
 	patches.kernel.org/6.6.15-088-arm64-dts-qcom-Add-missing-vio-supply-for-AW20.patch
+	patches.kernel.org/6.6.15-089-ARM-dts-qcom-sdx55-fix-USB-DP-DM-HS-PHY-interr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
