--- a/series.conf
+++ b/series.conf
@@ -3080,6 +3080,7 @@
 	patches.kernel.org/6.6.15-161-bpf-keep-track-of-max-number-of-bpf_loop-callb.patch
 	patches.kernel.org/6.6.15-162-selftests-bpf-check-if-max-number-of-bpf_loop-.patch
 	patches.kernel.org/6.6.15-163-Revert-drm-amd-Enable-PCIe-PME-from-D3.patch
+	patches.kernel.org/6.6.15-164-cifs-fix-lock-ordering-while-disabling-multich.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
