--- a/series.conf
+++ b/series.conf
@@ -3014,6 +3014,7 @@
 	patches.kernel.org/6.6.15-095-arm64-dts-qcom-sc8180x-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-096-arm64-dts-qcom-sdm670-fix-USB-DP-DM-HS-PHY-int.patch
 	patches.kernel.org/6.6.15-097-arm64-dts-qcom-sdm670-fix-USB-SS-wakeup.patch
+	patches.kernel.org/6.6.15-098-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
