--- a/series.conf
+++ b/series.conf
@@ -3244,6 +3244,7 @@
 	patches.kernel.org/6.6.15-325-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
 	patches.kernel.org/6.6.15-326-genirq-Initialize-resend_node-hlist-for-all-in.patch
 	patches.kernel.org/6.6.15-327-clocksource-Skip-watchdog-check-for-large-watc.patch
+	patches.kernel.org/6.6.15-328-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
