--- a/series.conf
+++ b/series.conf
@@ -3147,6 +3147,7 @@
 	patches.kernel.org/6.6.15-228-tsnep-Remove-FCS-for-XDP-data-path.patch
 	patches.kernel.org/6.6.15-229-tsnep-Fix-XDP_RING_NEED_WAKEUP-for-empty-fill-.patch
 	patches.kernel.org/6.6.15-230-btrfs-scrub-avoid-use-after-free-when-chunk-le.patch
+	patches.kernel.org/6.6.15-231-btrfs-zoned-fix-lock-ordering-in-btrfs_zone_ac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
