--- a/series.conf
+++ b/series.conf
@@ -3041,6 +3041,7 @@
 	patches.kernel.org/6.6.15-122-ubifs-ubifs_symlink-Fix-memleak-of-inode-i_lin.patch
 	patches.kernel.org/6.6.15-123-kexec-do-syscore_shutdown-in-kernel_kexec.patch
 	patches.kernel.org/6.6.15-124-selftests-mm-hugepage-vmemmap-fails-on-64K-pag.patch
+	patches.kernel.org/6.6.15-125-mm-rmap-fix-misplaced-parenthesis-of-a-likely.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
