--- a/series.conf
+++ b/series.conf
@@ -2946,6 +2946,7 @@
 	patches.kernel.org/6.6.15-027-cifs-handle-servers-that-still-advertise-multi.patch
 	patches.kernel.org/6.6.15-028-cifs-update-iface_last_update-on-each-query-an.patch
 	patches.kernel.org/6.6.15-029-powerpc-ps3_defconfig-Disable-PPC64_BIG_ENDIAN.patch
+	patches.kernel.org/6.6.15-030-ext4-allow-for-the-last-group-to-be-marked-as-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
