tsnep: Fix XDP_RING_NEED_WAKEUP for empty fill ring (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3145,6 +3145,7 @@
 	patches.kernel.org/6.6.15-226-selftests-bonding-do-not-test-arp-ns-target-wi.patch
 	patches.kernel.org/6.6.15-227-net-fec-fix-the-unhandled-context-fault-from-s.patch
 	patches.kernel.org/6.6.15-228-tsnep-Remove-FCS-for-XDP-data-path.patch
+	patches.kernel.org/6.6.15-229-tsnep-Fix-XDP_RING_NEED_WAKEUP-for-empty-fill-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
