--- a/series.conf
+++ b/series.conf
@@ -3006,6 +3006,7 @@
 	patches.kernel.org/6.6.15-087-arm64-dts-qcom-sc7280-fix-usb_1-wakeup-interru.patch
 	patches.kernel.org/6.6.15-088-arm64-dts-qcom-Add-missing-vio-supply-for-AW20.patch
 	patches.kernel.org/6.6.15-089-ARM-dts-qcom-sdx55-fix-USB-DP-DM-HS-PHY-interr.patch
+	patches.kernel.org/6.6.15-090-arm64-dts-qcom-sdm845-fix-USB-DP-DM-HS-PHY-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
