arm64: dts: rockchip: configure eth pad driver strength for orangepi r1 plus lts (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2994,6 +2994,7 @@
 	patches.kernel.org/6.6.15-075-ARM-dts-samsung-exynos4210-i9100-Unconditional.patch
 	patches.kernel.org/6.6.15-076-ARM-dts-qcom-sdx55-fix-pdc-interrupt-cells.patch
 	patches.kernel.org/6.6.15-077-arm64-dts-sprd-fix-the-cpu-node-for-UMS512.patch
+	patches.kernel.org/6.6.15-078-arm64-dts-rockchip-configure-eth-pad-driver-st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
