cpufreq/amd-pstate: Fix setting scaling max/min freq values (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3233,6 +3233,7 @@
 	patches.kernel.org/6.6.15-314-spi-intel-pci-Remove-Meteor-Lake-S-SoC-PCI-ID-.patch
 	patches.kernel.org/6.6.15-315-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 	patches.kernel.org/6.6.15-316-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
+	patches.kernel.org/6.6.15-317-cpufreq-amd-pstate-Fix-setting-scaling-max-min.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
