exec: Fix error handling in begin_new_exec() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3155,6 +3155,7 @@
 	patches.kernel.org/6.6.15-236-btrfs-defrag-reject-unknown-flags-of-btrfs_ioc.patch
 	patches.kernel.org/6.6.15-237-btrfs-don-t-abort-filesystem-when-attempting-t.patch
 	patches.kernel.org/6.6.15-238-rbd-don-t-move-requests-to-the-running-list-on.patch
+	patches.kernel.org/6.6.15-239-exec-Fix-error-handling-in-begin_new_exec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
