--- a/series.conf
+++ b/series.conf
@@ -2937,6 +2937,7 @@
 	patches.kernel.org/6.6.15-018-scsi-core-Kick-the-requeue-list-after-insertin.patch
 	patches.kernel.org/6.6.15-019-sh-ecovec24-Rename-missed-backlight-field-from.patch
 	patches.kernel.org/6.6.15-020-smb-client-fix-parsing-of-SMB3.1.1-POSIX-creat.patch
+	patches.kernel.org/6.6.15-021-cifs-handle-cases-where-a-channel-is-closed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
