serial: sc16is7xx: remove unused line structure member (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3047,6 +3047,7 @@
 	patches.kernel.org/6.6.15-128-serial-sc16is7xx-improve-regmap-debugfs-by-usi.patch
 	patches.kernel.org/6.6.15-129-serial-sc16is7xx-remove-wasteful-static-buffer.patch
 	patches.kernel.org/6.6.15-130-serial-sc16is7xx-remove-global-regmap-from-str.patch
+	patches.kernel.org/6.6.15-131-serial-sc16is7xx-remove-unused-line-structure-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
