--- a/series.conf
+++ b/series.conf
@@ -3225,6 +3225,7 @@
 	patches.kernel.org/6.6.15-306-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
 	patches.kernel.org/6.6.15-307-memblock-fix-crash-when-reserved-memory-is-not.patch
 	patches.kernel.org/6.6.15-308-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
+	patches.kernel.org/6.6.15-309-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
