drm/amdgpu/pm: Fix the power source flag error (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3187,6 +3187,7 @@
 	patches.kernel.org/6.6.15-268-drm-amd-display-Port-DENTIST-hang-and-TDR-fixe.patch
 	patches.kernel.org/6.6.15-269-drm-amd-display-Align-the-returned-error-code-.patch
 	patches.kernel.org/6.6.15-270-drm-amd-display-Fix-late-derefrence-dsc-check-.patch
+	patches.kernel.org/6.6.15-271-drm-amdgpu-pm-Fix-the-power-source-flag-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
