--- a/series.conf
+++ b/series.conf
@@ -2934,6 +2934,7 @@
 	patches.kernel.org/6.6.15-015-dmaengine-idxd-Move-dma_free_coherent-out-of-s.patch
 	patches.kernel.org/6.6.15-016-scsi-ufs-core-Remove-the-ufshcd_hba_exit-call-.patch
 	patches.kernel.org/6.6.15-017-riscv-Fix-an-off-by-one-in-get_early_cmdline.patch
+	patches.kernel.org/6.6.15-018-scsi-core-Kick-the-requeue-list-after-insertin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
