--- a/series.conf
+++ b/series.conf
@@ -2969,6 +2969,7 @@
 	patches.kernel.org/6.6.15-050-soc-qcom-pmic_glink_altmode-fix-port-sanity-ch.patch
 	patches.kernel.org/6.6.15-051-media-imx355-Enable-runtime-PM-before-register.patch
 	patches.kernel.org/6.6.15-052-rpmsg-virtio-Free-driver_override-when-rpmsg_r.patch
+	patches.kernel.org/6.6.15-053-media-ov9734-Enable-runtime-PM-before-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
