media: imx355: Enable runtime PM before registering async sub-device (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2967,6 +2967,7 @@
 	patches.kernel.org/6.6.15-048-mtd-rawnand-Prevent-sequential-reads-with-on-d.patch
 	patches.kernel.org/6.6.15-049-mtd-rawnand-Clarify-conditions-to-enable-conti.patch
 	patches.kernel.org/6.6.15-050-soc-qcom-pmic_glink_altmode-fix-port-sanity-ch.patch
+	patches.kernel.org/6.6.15-051-media-imx355-Enable-runtime-PM-before-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
