--- a/series.conf
+++ b/series.conf
@@ -3083,6 +3083,7 @@
 	patches.kernel.org/6.6.15-164-cifs-fix-lock-ordering-while-disabling-multich.patch
 	patches.kernel.org/6.6.15-165-cifs-fix-a-pending-undercount-of-srv_count.patch
 	patches.kernel.org/6.6.15-166-cifs-after-disabling-multichannel-mark-tcon-fo.patch
+	patches.kernel.org/6.6.15-167-SUNRPC-use-request-size-to-initialize-bio_vec-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
