arm64: dts: qcom: sc8280xp-crd: fix eDP phy compatible (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2989,6 +2989,7 @@
 	patches.kernel.org/6.6.15-070-parisc-firmware-Fix-F-extend-for-PDC-addresses.patch
 	patches.kernel.org/6.6.15-071-parisc-power-Fix-power-soft-off-button-emulati.patch
 	patches.kernel.org/6.6.15-072-ARM-dts-imx6q-apalis-add-can-power-up-delay-on.patch
+	patches.kernel.org/6.6.15-073-arm64-dts-qcom-sc8280xp-crd-fix-eDP-phy-compat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
