thermal: trip: Drop lockdep assertion from thermal_zone_trip_id() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3247,6 +3247,7 @@
 	patches.kernel.org/6.6.15-328-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 	patches.kernel.org/6.6.15-329-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
 	patches.kernel.org/6.6.15-330-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
+	patches.kernel.org/6.6.15-331-thermal-trip-Drop-lockdep-assertion-from-therm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
