--- a/series.conf
+++ b/series.conf
@@ -2950,6 +2950,7 @@
 	patches.kernel.org/6.6.15-031-async-Split-async_schedule_node_domain.patch
 	patches.kernel.org/6.6.15-032-async-Introduce-async_schedule_dev_nocall.patch
 	patches.kernel.org/6.6.15-033-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
+	patches.kernel.org/6.6.15-034-arm64-properly-install-vmlinuz.efi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
