x86/entry/ia32: Ensure s32 is sign extended to s64 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3245,6 +3245,7 @@
 	patches.kernel.org/6.6.15-326-genirq-Initialize-resend_node-hlist-for-all-in.patch
 	patches.kernel.org/6.6.15-327-clocksource-Skip-watchdog-check-for-large-watc.patch
 	patches.kernel.org/6.6.15-328-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
+	patches.kernel.org/6.6.15-329-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
