tcp: Add memory barrier to tcp_push() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3102,6 +3102,7 @@
 	patches.kernel.org/6.6.15-183-netfs-fscache-Prevent-Oops-in-fscache_put_cach.patch
 	patches.kernel.org/6.6.15-184-tracing-Ensure-visibility-when-inserting-an-el.patch
 	patches.kernel.org/6.6.15-185-afs-Hide-silly-rename-files-from-userspace.patch
+	patches.kernel.org/6.6.15-186-tcp-Add-memory-barrier-to-tcp_push.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
