media: v4l: cci: Add macros to obtain register width and address (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3196,6 +3196,7 @@
 	patches.kernel.org/6.6.15-277-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 	patches.kernel.org/6.6.15-278-pipe-wakeup-wr_wait-after-setting-max_usage.patch
 	patches.kernel.org/6.6.15-279-media-v4l-cci-Include-linux-bits.h.patch
+	patches.kernel.org/6.6.15-280-media-v4l-cci-Add-macros-to-obtain-register-wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
