drm/amd/display: Port DENTIST hang and TDR fixes to OTG disable W/A (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3184,6 +3184,7 @@
 	patches.kernel.org/6.6.15-265-drm-bridge-nxp-ptn3460-simplify-some-error-che.patch
 	patches.kernel.org/6.6.15-266-drm-amdgpu-correct-the-cu-count-for-gfx-v11.patch
 	patches.kernel.org/6.6.15-267-drm-amd-display-Fix-variable-deferencing-befor.patch
+	patches.kernel.org/6.6.15-268-drm-amd-display-Port-DENTIST-hang-and-TDR-fixe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
