--- a/series.conf
+++ b/series.conf
@@ -3052,6 +3052,7 @@
 	patches.kernel.org/6.6.15-133-serial-sc16is7xx-convert-from-_raw_-to-_noinc_.patch
 	patches.kernel.org/6.6.15-134-serial-sc16is7xx-fix-invalid-sc16is7xx_lines-b.patch
 	patches.kernel.org/6.6.15-135-serial-sc16is7xx-remove-obsolete-loop-in-sc16i.patch
+	patches.kernel.org/6.6.15-136-serial-sc16is7xx-improve-do-while-loop-in-sc16.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
