--- a/series.conf
+++ b/series.conf
@@ -2966,6 +2966,7 @@
 	patches.kernel.org/6.6.15-047-mtd-rawnand-Fix-core-interference-with-sequent.patch
 	patches.kernel.org/6.6.15-048-mtd-rawnand-Prevent-sequential-reads-with-on-d.patch
 	patches.kernel.org/6.6.15-049-mtd-rawnand-Clarify-conditions-to-enable-conti.patch
+	patches.kernel.org/6.6.15-050-soc-qcom-pmic_glink_altmode-fix-port-sanity-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
