arm64: Rename ARM64_WORKAROUND_2966298 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3027,6 +3027,7 @@
 	patches.kernel.org/6.6.15-108-media-mtk-jpeg-Fix-use-after-free-bug-due-to-e.patch
 	patches.kernel.org/6.6.15-109-riscv-mm-Fixup-compat-arch_get_mmap_end.patch
 	patches.kernel.org/6.6.15-110-riscv-mm-Fixup-compat-mode-boot-failure.patch
+	patches.kernel.org/6.6.15-111-arm64-Rename-ARM64_WORKAROUND_2966298.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
