drm/i915/psr: Only allow PSR in LPSP mode on HSW non-ULT (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3210,6 +3210,7 @@
 	patches.kernel.org/6.6.15-291-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 	patches.kernel.org/6.6.15-292-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 	patches.kernel.org/6.6.15-293-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
+	patches.kernel.org/6.6.15-294-drm-i915-psr-Only-allow-PSR-in-LPSP-mode-on-HS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
