--- a/series.conf
+++ b/series.conf
@@ -3207,6 +3207,7 @@
 	patches.kernel.org/6.6.15-288-serial-core-Provide-port-lock-wrappers.patch
 	patches.kernel.org/6.6.15-289-serial-sc16is7xx-Use-port-lock-wrappers.patch
 	patches.kernel.org/6.6.15-290-serial-sc16is7xx-fix-unconditional-activation-.patch
+	patches.kernel.org/6.6.15-291-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
