net: stmmac: Wait a bit for the reset to take effect (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3124,6 +3124,7 @@
 	patches.kernel.org/6.6.15-205-netfilter-nft_limit-reject-configurations-that.patch
 	patches.kernel.org/6.6.15-206-netfilter-nf_tables-restrict-anonymous-set-and.patch
 	patches.kernel.org/6.6.15-207-netfilter-nf_tables-validate-NFPROTO_-family.patch
+	patches.kernel.org/6.6.15-208-net-stmmac-Wait-a-bit-for-the-reset-to-take-ef.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
