--- a/series.conf
+++ b/series.conf
@@ -3093,6 +3093,7 @@
 	patches.kernel.org/6.6.15-174-vlan-skip-nested-type-that-is-not-IFLA_VLAN_QO.patch
 	patches.kernel.org/6.6.15-175-llc-make-llc_ui_sendmsg-more-robust-against-bo.patch
 	patches.kernel.org/6.6.15-176-llc-Drop-support-for-ETH_P_TR_802_2.patch
+	patches.kernel.org/6.6.15-177-udp-fix-busy-polling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
