--- a/series.conf
+++ b/series.conf
@@ -3166,6 +3166,7 @@
 	patches.kernel.org/6.6.15-247-ksmbd-fix-global-oob-in-ksmbd_nl_policy.patch
 	patches.kernel.org/6.6.15-248-firmware-arm_scmi-Check-mailbox-SMT-channel-fo.patch
 	patches.kernel.org/6.6.15-249-Revert-drivers-firmware-Move-sysfb_init-from-d.patch
+	patches.kernel.org/6.6.15-250-drm-amdgpu-Fix-the-null-pointer-when-load-rlc-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
