soc: fsl: cpm1: qmc: Fix rx channel reset (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2974,6 +2974,7 @@
 	patches.kernel.org/6.6.15-055-media-ov01a10-Enable-runtime-PM-before-registe.patch
 	patches.kernel.org/6.6.15-056-soc-fsl-cpm1-tsa-Fix-__iomem-addresses-declara.patch
 	patches.kernel.org/6.6.15-057-soc-fsl-cpm1-qmc-Fix-__iomem-addresses-declara.patch
+	patches.kernel.org/6.6.15-058-soc-fsl-cpm1-qmc-Fix-rx-channel-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
