firmware: arm_scmi: Use xa_insert() when saving raw queues (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3227,6 +3227,7 @@
 	patches.kernel.org/6.6.15-308-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
 	patches.kernel.org/6.6.15-309-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
 	patches.kernel.org/6.6.15-310-firmware-arm_scmi-Use-xa_insert-to-store-opps.patch
+	patches.kernel.org/6.6.15-311-firmware-arm_scmi-Use-xa_insert-when-saving-ra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
