bus: mhi: host: Add alignment check for event ring read pointer (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2983,6 +2983,7 @@
 	patches.kernel.org/6.6.15-064-s390-vfio-ap-do-not-reset-queue-removed-from-h.patch
 	patches.kernel.org/6.6.15-065-nbd-always-initialize-struct-msghdr-completely.patch
 	patches.kernel.org/6.6.15-066-mips-Fix-max_mapnr-being-uninitialized-on-earl.patch
+	patches.kernel.org/6.6.15-067-bus-mhi-host-Add-alignment-check-for-event-rin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
