serial: Do not hold the port lock when setting rx-during-tx GPIO (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3055,6 +3055,7 @@
 	patches.kernel.org/6.6.15-136-serial-sc16is7xx-improve-do-while-loop-in-sc16.patch
 	patches.kernel.org/6.6.15-137-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
 	patches.kernel.org/6.6.15-138-mm-page_alloc-unreserve-highatomic-page-blocks.patch
+	patches.kernel.org/6.6.15-139-serial-Do-not-hold-the-port-lock-when-setting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
