drm/panel-edp: drm/panel-edp: Fix AUO B116XAK01 name and timing (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3212,6 +3212,7 @@
 	patches.kernel.org/6.6.15-293-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
 	patches.kernel.org/6.6.15-294-drm-i915-psr-Only-allow-PSR-in-LPSP-mode-on-HS.patch
 	patches.kernel.org/6.6.15-295-drm-panel-edp-Add-AUO-B116XTN02-BOE-NT116WHM-N.patch
+	patches.kernel.org/6.6.15-296-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
