ksmbd: send lease break notification on FILE_RENAME_INFORMATION (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3059,6 +3059,7 @@
 	patches.kernel.org/6.6.15-140-ksmbd-set-v2-lease-version-on-lease-upgrade.patch
 	patches.kernel.org/6.6.15-141-ksmbd-fix-potential-circular-locking-issue-in-.patch
 	patches.kernel.org/6.6.15-142-ksmbd-don-t-increment-epoch-if-current-state-a.patch
+	patches.kernel.org/6.6.15-143-ksmbd-send-lease-break-notification-on-FILE_RE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
