platform/x86: p2sb: Allow p2sb_bar() calls during PCI device probe (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3162,6 +3162,7 @@
 	patches.kernel.org/6.6.15-243-netfilter-nft_chain_filter-handle-NETDEV_UNREG.patch
 	patches.kernel.org/6.6.15-244-netfilter-nf_tables-reject-QUEUE-DROP-verdict-.patch
 	patches.kernel.org/6.6.15-245-platform-x86-intel-uncore-freq-Fix-types-in-sy.patch
+	patches.kernel.org/6.6.15-246-platform-x86-p2sb-Allow-p2sb_bar-calls-during-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
