block: Move checking GENHD_FL_NO_PART to bdev_add_partition() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3231,6 +3231,7 @@
 	patches.kernel.org/6.6.15-312-gpio-eic-sprd-Clear-interrupt-after-set-the-in.patch
 	patches.kernel.org/6.6.15-313-ARM-dts-exynos4212-tab3-add-samsung-invert-vcl.patch
 	patches.kernel.org/6.6.15-314-spi-intel-pci-Remove-Meteor-Lake-S-SoC-PCI-ID-.patch
+	patches.kernel.org/6.6.15-315-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
