scsi: ufs: core: Remove the ufshcd_hba_exit() call from ufshcd_async_scan() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2932,6 +2932,7 @@
 	patches.kernel.org/6.6.15-013-dmaengine-fsl-edma-fix-eDMAv4-channel-allocati.patch
 	patches.kernel.org/6.6.15-014-dmaengine-fix-NULL-pointer-in-channel-unregist.patch
 	patches.kernel.org/6.6.15-015-dmaengine-idxd-Move-dma_free_coherent-out-of-s.patch
+	patches.kernel.org/6.6.15-016-scsi-ufs-core-Remove-the-ufshcd_hba_exit-call-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
